# finance

./: .pylintrc  coderabbitai.yaml  hello.py  mypy.ini  pyproject.toml
.github/workflows/: python_CI.yml
finance/: hello.py
tests/: test_hello.py
