[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["Abahaci <marek.netusil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
pylint = "^3.3.8"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
